
 * Simple filter support for processes routes

 * New GetCardPosition management

 * Client performance improvements

 * Metadata for functions through REST interface

 * Added Greek translation

 * Management of geometric attributes through REST API

 * Management of relation attributes through SOAP API

 * Information about the filter of the nodes of domain trees through REST API


FIXES

 * Software version string visually displayed in half on login panel

 * Selected tab reset on class change in administration Classes module

 * Classes geographical attributes tab no zoom levels validation

 * Selected tab reset on accordion selection change in administration modules

 * UI not loading on Tomcat 8.0.36 (latest)

 * Double email delete server call on create/edit window close

 * CreateModifyCard widget with null Reference cannot be configured

 * History tab rows doesn't display relation attributes

 * Error when trying to get cards from a superclass when there are row privileges defined on a subclass

 * Wrong selection when accessing closed processes from URL

 * Task manager UI behavior errors

 * "Privileged" status for user invalidates "impersonate" operation of WorkflowAPI

 * Tab details errors with simple class ForeignKey as source

 * ForeignKey fields store URL errors

 * Widget buttons duplication while using direct routes on process instance with Firefox

 * Error while saving a search filter without selecting a default group

 * Wrong privileges management for reports from REST web services

 * When invoking a function and the function is not found, the call returns an empty result and no error

 * Detail tab ForeignKeys presentation problems

 * Authorization header key not refreshed on subsequent calls

 * Import CSV should not fail if some non-existing attributes are specified

 * When deleting a class/process through JSON-RPC interface the response is always a success even if the class/process is not found
